fixed the alignment of placeholder images

--- a/style.css
+++ b/style.css
@@ -99,11 +99,19 @@ figure {
     margin: 2rem; 
 }
 
+figure img {
+    width: 20rem; 
+    height: 12rem; 
+}
+
 figcaption {
     background-color: rgb(255, 0, 255);
     text-align: center;
     font-size: x-large;
-    
+}
+
+figcaption:hover {
+    background-color: rgb(0, 255, 179);
 }
 
 .contact-details {
